--- a/ymir/static/css/styles.css
+++ b/ymir/static/css/styles.css
@@ -556,20 +556,23 @@ html.dark-theme .json-null {
 /* Links */
 html.dark-theme a,
 html.dark-theme .text-blue-600 {
-    color: #fca5a5 !important;
-    /* Red-300 */
+    color: #f4a9b5 !important;
+    /* ymir-300 */
 }
 
 html.dark-theme a:hover,
 html.dark-theme .hover\:text-blue-700:hover {
-    color: #fee2e2 !important;
-    /* Red-100 */
+    color: #fce7ea !important;
+    /* ymir-100 */
 }
 
+html.dark-theme .text-ymir-500,
+html.dark-theme .text-ymir-600,
 html.dark-theme .text-red-600,
+html.dark-theme .hover\:text-ymir-900:hover,
 html.dark-theme .hover\:text-red-900:hover {
-    color: #f87171 !important;
-    /* Red-400 */
+    color: #ed758a !important;
+    /* ymir-400 */
 }
 
 /* File upload styling */
