--- a/ymir/templates/triplet_table.html
+++ b/ymir/templates/triplet_table.html
@@ -94,7 +94,7 @@
                 </div>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                <button class="text-red-600 hover:text-red-900 mr-2" hx-delete="/delete_triplet/{{ entry.id }}"
+                <button class="text-ymir-600 hover:text-ymir-900 mr-2" hx-delete="/delete_triplet/{{ entry.id }}"
                     hx-confirm="Are you sure you want to delete this triplet?" hx-target="#triplet-dataset"
                     hx-swap="innerHTML">
                     Delete
